--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="footer-section contact">
                 <h3>Contact Us</h3>
-                <p><strong>Address:</strong> 123 Main Street, Your City</p>
+                <p><strong>Address:</strong> 46/7 Main Street, Kandy</p>
                 <p><strong>Phone:</strong> (555) 123-4567</p>
                 <p><strong>Email:</strong> info@nationmedical.com</p>
             </div>
